# rpcpp_snippets

./: CMakeLists.txt  README.md
GUIs/: CMakeLists.txt
GUIs/src/: main_ui.cpp  main_ui.hpp
primitives/: CMakeLists.txt
